[gd_scene load_steps=9 format=3 uid="uid://bpf7dvntq1kya"]

[ext_resource type="Texture2D" uid="uid://dwcxxt7y6o7xf" path="res://Assets/car/road/car-game-tilesheet.png" id="1_4layg"]
[ext_resource type="Script" path="res://Main.gd" id="1_m0lyv"]
[ext_resource type="PackedScene" uid="uid://wgoa6w5wlilk" path="res://car.tscn" id="2_a2w5f"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_tvq8p"]
texture = ExtResource("1_4layg")
texture_region_size = Vector2i(66, 65)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-33, -32.5, 33, -32.5, 33, -25.5, -33, -25.4558)
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
3:0/0 = 0
3:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_0/angular_velocity = 0.0
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
3:1/0 = 0
3:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:1/0/physics_layer_0/angular_velocity = 0.0
0:2/0 = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-33, -32.5, 33, -32.5, 33, -26.163, 33, 25.1023, 33, 32.5, -33, 32.5, -33, 23.3345, -33, -26.1629)
1:2/0 = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-33, 24.3952, 33, 24.3952, 33, 32.5, -33, 32.5)
2:2/0 = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0
0:3/0 = 0
0:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:3/0/physics_layer_0/angular_velocity = 0.0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-33, -32.5, 33, -32.5, 33, 32.5, -33, 32.5)

[sub_resource type="TileSet" id="TileSet_2tvfc"]
tile_size = Vector2i(66, 65)
physics_layer_0/collision_layer = 1
sources/1 = SubResource("TileSetAtlasSource_tvq8p")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wo1fs"]
size = Vector2(24, 48)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6mjih"]
size = Vector2(20, 61)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ybc8k"]
size = Vector2(17, 59)

[node name="Main" type="Node2D"]
script = ExtResource("1_m0lyv")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_2tvfc")
format = 2
layer_0/tile_data = PackedInt32Array(-327687, 1, 3, -327686, 1, 3, -327685, 1, 3, -327684, 1, 3, -327683, 1, 3, -327682, 1, 3, -327681, 1, 3, -262145, 1, 3, -327680, 1, 3, -327679, 1, 3, -393215, 1, 3, -393214, 1, 3, -393213, 1, 3, -393212, 1, 3, -393211, 1, 3, -327675, 1, 3, -327674, 1, 3, -327673, 1, 3, -327672, 1, 3, -393208, 1, 3, -393207, 1, 3, -393206, 1, 3, -393205, 1, 3, -393204, 1, 3, -393203, 1, 3, -393202, 1, 3, -393201, 1, 3, -393200, 1, 3, -393199, 1, 3, -327663, 1, 3, -327662, 1, 3, -327661, 1, 3, -327660, 1, 3, -327659, 1, 3, -327658, 1, 3, -262122, 1, 3, -262121, 1, 3, -196585, 1, 3, -196584, 1, 3, -131048, 1, 3, -65512, 1, 3, 24, 1, 3, 25, 1, 3, 65561, 1, 3, 131097, 1, 3, 196633, 1, 3, 262169, 1, 3, 327705, 1, 3, 393241, 1, 3, 458777, 1, 3, 524313, 1, 3, 589849, 1, 3, 655385, 1, 3, 720921, 1, 3, 786457, 1, 3, 851993, 1, 3, 917529, 1, 3, 983065, 1, 3, 983064, 1, 3, 983063, 1, 3, 983062, 1, 3, 983061, 1, 3, 983060, 1, 3, 983059, 1, 3, 983058, 1, 3, 983057, 1, 3, 983056, 1, 3, 983055, 1, 3, 983054, 1, 3, 983053, 1, 3, 983052, 1, 3, 983051, 1, 3, 983050, 1, 3, 983049, 1, 3, 983048, 1, 3, 983047, 1, 3, 983046, 1, 3, 983045, 1, 3, 983044, 1, 3, 983043, 1, 3, 983042, 1, 3, 983041, 1, 3, 983040, 1, 3, 1048575, 1, 3, 1048574, 1, 3, 1048573, 1, 3, 1048572, 1, 3, 1048571, 1, 3, 1048570, 1, 3, 1048569, 1, 3, 1048568, 1, 3, 983032, 1, 3, 983031, 1, 3, 983030, 1, 3, 983029, 1, 3, 983028, 1, 3, 983027, 1, 3, 917491, 1, 3, 851955, 1, 3, 786419, 1, 3, 720883, 1, 3, 655347, 1, 3, 589811, 1, 3, 524275, 1, 3, 458739, 1, 3, 393203, 1, 3, 327667, 1, 3, 262131, 1, 3, 196595, 1, 3, 131059, 1, 3, 65523, 1, 3, -13, 1, 3, -65549, 1, 3, -131085, 1, 3, -196621, 1, 3, -262157, 1, 3, -327693, 1, 3, -327692, 1, 3, -327691, 1, 3, -327690, 1, 3, -327689, 1, 3, -327688, 1, 3, 65538, 1, 1, 65537, 196609, 0, 65539, 1, 0, 65541, 1, 0, 65540, 1, 0, 65542, 1, 0, 65543, 1, 0, 65544, 1, 0, 65545, 1, 0, 65546, 1, 0, 65547, 1, 0, 65548, 1, 0, 65549, 1, 0, 65550, 1, 0, 65551, 1, 0, 65552, 196609, 1, 131088, 65537, 0, 196624, 65537, 0, 262160, 131073, 1, 262159, 131073, 0, 196623, 65537, 0, 131087, 196609, 1, 131086, 1, 0, 131085, 65537, 2, 131084, 196609, 0, 196620, 65537, 0, 458764, 131073, 0, 458765, 1, 0, 458766, 1, 0, 458767, 1, 0, 458768, 196609, 1, 524304, 65537, 0, 589840, 131073, 1, 589839, 1, 0, 589838, 1, 0, 589837, 1, 0, 589836, 1, 0, 589834, 131073, 0, 589835, 1, 0, 524298, 65537, 0, 393226, 65537, 0, 458762, 65537, 0, 327690, 65537, 0, 262154, 65537, 0, 196618, 196609, 1, 196617, 1, 0, 196616, 1, 0, 196615, 1, 0, 196613, 65537, 2, 196612, 196609, 0, 262148, 65537, 0, 327684, 65537, 0, 393220, 65537, 0, 458756, 65537, 0, 524292, 131073, 1, 524291, 1, 0, 524290, 1, 0, 524289, 131073, 0, 131073, 65537, 0, 196609, 65537, 0, 262145, 65537, 0, 327681, 65537, 0, 393217, 65537, 0, 458753, 65537, 0, 458754, 1, 2, 393218, 1, 2, 327682, 1, 2, 196610, 1, 2, 131074, 1, 2, 131075, 1, 2, 196611, 1, 2, 262147, 1, 2, 327683, 1, 2, 393219, 1, 2, 262146, 1, 2, 458755, 1, 2, 262149, 1, 2, 327685, 1, 2, 393221, 1, 2, 458757, 1, 2, 524293, 1, 2, 589829, 1, 2, 589828, 1, 2, 589827, 1, 2, 589826, 1, 2, 589825, 1, 2, 524288, 1, 2, 589824, 1, 2, 458752, 1, 2, 393216, 1, 2, 327680, 1, 2, 262144, 1, 2, 196608, 1, 2, 131072, 1, 2, 65536, 1, 2, 0, 1, 2, 1, 1, 2, 2, 1, 2, 3, 1, 2, 4, 1, 2, 5, 1, 2, 6, 1, 2, 7, 1, 2, 8, 1, 2, 9, 1, 2, 10, 1, 2, 11, 1, 2, 12, 1, 2, 13, 1, 2, 14, 1, 2, 15, 1, 2, 16, 1, 2, 17, 1, 2, 65553, 1, 2, 131089, 1, 2, 196625, 1, 2, 262161, 1, 2, 327697, 1, 2, 327696, 1, 2, 327695, 1, 2, 327694, 1, 2, 262158, 1, 2, 196622, 1, 2, 196621, 1, 2, 262157, 1, 2, 327693, 1, 2, 393229, 1, 2, 393230, 1, 2, 393231, 1, 2, 393232, 1, 2, 393233, 1, 2, 458769, 1, 2, 524305, 1, 2, 589841, 1, 2, 655377, 1, 2, 655376, 1, 2, 655375, 1, 2, 655374, 1, 2, 655373, 1, 2, 655372, 1, 2, 655371, 1, 2, 655370, 1, 2, 655369, 1, 2, 589833, 1, 2, 524297, 1, 2, 458761, 1, 2, 393225, 1, 2, 327689, 1, 2, 262153, 1, 2, 262152, 1, 2, 262151, 1, 2, 262150, 1, 2, 131076, 1, 2, 131077, 1, 2, 131078, 1, 2, 131079, 1, 2, 131080, 1, 2, 131081, 1, 2, 131082, 1, 2, 131083, 1, 2, 196619, 1, 2, 262155, 1, 2, 327691, 1, 2, 393227, 1, 2, 458763, 1, 2, 524299, 1, 2, 524300, 1, 2, 524301, 1, 2, 524302, 1, 2, 524303, 1, 2, 262156, 65537, 0, 393228, 65537, 0, 327692, 65537, 0, 196614, 1, 0)

[node name="Car" parent="." instance=ExtResource("2_a2w5f")]
z_index = 10
texture_filter = 1
position = Vector2(224, 96)
collision_priority = 2.0

[node name="StartEnd" type="Area2D" parent="."]
position = Vector2(160, 96)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StartEnd"]
position = Vector2(4, 0)
shape = SubResource("RectangleShape2D_wo1fs")

[node name="checkpoint1" type="Area2D" parent="."]
z_index = 15
position = Vector2(891, 144)

[node name="CollisionShape2D" type="CollisionShape2D" parent="checkpoint1"]
position = Vector2(0, 20.5)
shape = SubResource("RectangleShape2D_6mjih")

[node name="checkpoint2" type="Area2D" parent="."]
z_index = 15

[node name="CollisionShape2D" type="CollisionShape2D" parent="checkpoint2"]
position = Vector2(362.5, 227.5)
shape = SubResource("RectangleShape2D_ybc8k")

[node name="StartTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true
autostart = true

[node name="start321" type="Label" parent="."]
offset_left = 481.0
offset_top = 397.0
offset_right = 521.0
offset_bottom = 420.0
text = "321"

[connection signal="area_entered" from="StartEnd" to="." method="_on_start_end_area_entered"]
[connection signal="area_entered" from="checkpoint1" to="." method="_on_checkpoint_1_area_entered"]
[connection signal="area_entered" from="checkpoint2" to="." method="_on_checkpoint_2_area_entered"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
